--- a/finetune-llm/notebooks/run-llama-gguf.ipynb
+++ b/finetune-llm/notebooks/run-llama-gguf.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessage(content=' In Python, when code goes astray,\\nExceptions arise, to our dismay.\\nWith tracebacks so clear,\\nErrors we can hear,\\nAnd fix bugs before the end of the day!', role='assistant', function_call=None, tool_calls=None)\n"
+      "ChatCompletionMessage(content='There once was a coder named Bill,\\nWho wrote Python with skill and thrill,\\nBut his code would oft break,\\nWhen exceptions he\\'d awake,\\nAnd he\\'d sigh, \"I must fix this still.\"', role='assistant', function_call=None, tool_calls=None)\n"
      ]
     }
    ],
